# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,10 @@
 import { Router } from "express";
 import healthRouter from "./health";
+import courseRouter from "./course";
 
 const router = Router();
 
 router.use(healthRouter);
-
-router.use("/healthz", healthRouter);
+router.use("/courses", courseRouter);
 
 export default router;
